# fantasytable-script

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml
fantasymarkup/: __init__.py
fantasymarkup/types/: array.py  boolean.py  integer.py  script.py  struct.py
fantasyscript/: __init__.py  result.py  stacktrace.py  utils.py
fantasyscript/datatypes/: __init__.py  boxed.py  floatingbox.py  integerbox.py  rollbox.py  scope.py
fantasyscript/operators/: __init__.py  access.py  accesses.py  array.py  arrayroll.py  call.py  expression.py  ifstatement.py  index.py  logic.py  merge.py  parenthesis.py  prefix.py  scope.py  sum.py
fantasyscript/terminals/: boolean.py  decimal.py  integer.py  label.py  roll.py  string.py  struct.py  terminal.py
game/gamestate/: __init__.py  instance.py
game/gamestate/helpers/: json.py
game/gamestate/types/: calculated.py  string.py
game/tablescript/: __init__.py  tablelanguage.py
game/tablescript/datatypes/: __init__.py  arraybox.py  integerbox.py  stringbox.py
game/tablescript/operators/: access.py  call.py  compare.py  func.py  index.py  mul.py  naming.py  rollop.py
game/tablescript/terminals/: label.py
tablescript/: operators.py  scope.py  stacktrace.py  tablescript.py  typedefs.py  utils.py
tablescript/datatypes/: arraybox.py  booleanbox.py  floatingbox.py  integerbox.py  rollbox.py  stringbox.py
tests/: typetest.py
