[tool.poetry]
name = "fantasytable-tablescript"
version = "0.1.0"
description = "scripting language for fantasy table."
authors = ["Andrea Demontis"]

[tool.poetry.dependencies]
pypeg2 = "*"
numpy = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
